--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 .DS_Store
+utils/__pycache__/APSP_class.cpython-39.pyc
+utils/__pycache__/PCN_class.cpython-39.pyc
+utils/__pycache__/PCN_Dynamics_class.cpython-39.pyc
+utils/__pycache__/
