--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ utils/__pycache__/APSP_class.cpython-39.pyc
 utils/__pycache__/PCN_class.cpython-39.pyc
 utils/__pycache__/PCN_Dynamics_class.cpython-39.pyc
 utils/__pycache__/
+__pycache__/DEBT_control_class.cpython-39.pyc
